# chip8

./: Cargo.toml  README.md
chip8-core/: Cargo.toml
chip8-core/src/: font.rs  framebuffer.rs  key.rs  lib.rs  memory.rs  rom.rs  timer.rs
chip8-native/: Cargo.toml
chip8-native/src/: colour.rs  display.rs  event_loop.rs  main.rs  sound.rs  utils.rs
