[package]
name = "chip8-native"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chip8-core = { path = "../chip8-core" }
clap = { version = "4.5.47", features = ["derive"] }
env_logger = "0.11.8"
hex_color = "3.0.0"
palette = "0.7.6"
pixels = "0.15.0"
rodio = "0.21.1"
self_cell = "1.2.0"
softbuffer = "0.4.6"
winit = "0.30.12"
